tests/tests/errors/2006-45.vb
'#compiler-options:-recurse:
'#compiler-message:Command line error BC2006 : option 'recurse' requires ':<wildcard>'
'#exit-code:1